<resources>
    <string name="app_name">My Application</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create new account</string>
    <string name="happy_to_see_you_again">Happy to see you again!</string>
    <string name="hello">Hello!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="add_image">Add image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select user</string>
</resources>